# metku

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Developer_doc.ipynb  Frame2D_doc.ipynb  LICENSE  README.md  build_package.py  environment.yml  metku0.2.10.rar  metku0.2.11.rar  metku0.2.12.rar  metku0.2.13.rar  metku0.2.14.rar  metku0.2.7.rar  metku0.2.8.rar  metku0.2.9.rar  pilari.py  portal_frame.ipynb  requirements.txt  setup.cfg  setup.py  testi.txt  testi2.txt  upload_package.py
doc/: Kriittinen_Momentti.ipynb  Perustusliitos.ipynb  metku_basics.ipynb
metku/: Bnb_Pulpetti_test.py  HT2-Ristikko_alkuversio.py  Harjapalkki_test.py  KT5.py  __init__.py  analyysi_esim.py  en1993_examples.py  esim2.py  frame2d_optimization_example.py  log_to_file.py  test.py  test2.py  test3.py  test4.py  truss2d.py  truss2d_test.py  trussed_frame.py
mkdocs/: mkdocs.yml
src/: CI_test.py  PSO_optimization_log.txt  SRF_example1.py  SRF_example2.py  SRF_optimization_test.py  __init__.py  anna_SRF_example1.py  anna_continu_SRF_example1.py  anna_continu_semi_rigid_frame.py  anna_optimitzation.py  anna_optimization_frame2d.py  anna_pso.py  anna_semi_rigid_frame.py  cross_section.py  elements_back  en1993_examples.py  eurocodes_test.py  fem_example.py  fem_test.py  fem_test2.py  fem_test3.py  fem_test4.py  frame2d.py  frame2d_backup.py  frame2d_examples.ipynb  frame2d_optimization_example.py  frame2d_test.py  frame2d_test_copy.py  frame_fem.py  frame_test.py  hollow_sections.py  member_test.py  portal_frame.str  portal_test.str  profile_tables.py  pso.py  robot3D.py  roof_truss.py  (+14 more)
(+377 files in other folders)
