[metadata]
name = metku
version = attr: build_package.BUILD_VERSION
url = https://github.com/kuisidu/metku
author = Kristo Mela, Jaakko Huusko, Viktor Haimi
description = Module for structural analysis and optimization
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Education
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt

[options.packages.find]
where = .
